# NetflixProject

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.run  Dockerfile.server  Dockerfile.tests  Makefile  README.md  RunServers.sh  docker-compose.yml  package-lock.json
Tests/: AddCommandTests.cpp  AddTests.cpp  ConsoleMenu-Test.cpp  ConsoleMenuTest.cpp  ConsoleMenuTests.cpp  DeleteCommandTests.cpp  EndToEndTests.cpp  EndToEndTests2.cpp  FileStorageTests.cpp  GetCommandTests.cpp  HelpCommandTest.cpp  HelpCommandTests.cpp  MovieTests.cpp  PatchCommandTests.cpp  PostCommandTests.cpp  RecommendCommandTests.cpp  SocketMenuTests.cpp  TCPServerTests.cpp  Tests.h  ThreadManagerTests.cpp
Wiki/AndroidApp/: HowToRun.md  Movies&Admin.md  Signup&Login.md
Wiki/WebApp/: HowToRun.md  Movies&Admin.md  Movies.md  Signup&Login.md
data/: FolderHolder.txt  user_data.txt
src/AndroidApp/app/: build.gradle
src/AndroidApp/app/src/main/: AndroidManifest.xml
src/AndroidApp/app/src/main/java/com/example/myapplication/: AdminActivity.java  CustomHttpDataSourceFactory.java  GuestActivity.java  HomePageActivity.java  LoginActivity.java  LogoutActivity.java  MainActivity.java  MovieInfoActivity.java  MovieWatchActivity.java  MyApplication.java  SignUpActivity.java
src/AndroidApp/app/src/main/java/com/example/myapplication/adapters/: BindingAdapters.java  DynamicGridView.java  HorizontalMovieAdapter.java  MovieGridAdapter.java  ParentAdapter.java  VerticalCategoryAdapter.java
src/AndroidApp/app/src/main/java/com/example/myapplication/api/: MovieAPI.java  WebServiceAPI.java
src/AndroidApp/app/src/main/java/com/example/myapplication/dao/: AppDB.java  Converters.java  MovieDao.java  TokenDao.java  UserDao.java
src/AndroidApp/app/src/main/java/com/example/myapplication/entities/: Category.java  GetMoviesResponse.java  LoginRequest.java  LoginResponse.java  Movie.java  ProfilePictureResponse.java  Token.java  User.java
src/AndroidApp/app/src/main/java/com/example/myapplication/repositories/: CategoryRepository.java  MoviesRepository.java  TokenRepository.java  UserRepository.java
src/AndroidApp/app/src/main/java/com/example/myapplication/viewmodels/: MovieViewModel.java
src/AndroidApp/app/src/main/res/drawable/: faq_background.xml  rounded_background.xml  rounded_button.xml
src/AndroidApp/app/src/main/res/layout/: activity_admin.xml  activity_guest.xml  activity_home_page.xml  activity_login.xml  activity_main.xml  activity_movie_info.xml  activity_movie_watch.xml  activity_signup.xml  item_movie.xml  item_vertical.xml  logout_text.xml  movie_card.xml  movie_item.xml  navbar.xml  profile_dropdown.xml  profile_picture.xml  spinner_dropdown_item.xml  spinner_item.xml
src/AndroidApp/app/src/main/res/menu/: toolbar_menu.xml
src/AndroidApp/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
src/AndroidApp/gradle/: libs.versions.toml
src/AndroidApp/gradle/wrapper/: gradle-wrapper.properties
src/FileHandling/: FileStorage.cpp
src/Functionality/: AddCommand.cpp  DeleteCommand.cpp  GetCommand.cpp  HelpCommand.cpp  PatchCommand.cpp  PostCommand.cpp  RecommendCommand.cpp
src/Include/: AddCommand.h  App.h  CLI.h  ClientHandler.h  ConsoleMenu.h  DeleteCommand.h  FileStorage.h  GetCommand.h  Globals.h  HelpCommand.h  ICommand.h  IMenu.h  IServer.h  IStorage.h  IThreadManager.h  MovieUser.h  PatchCommand.h  PostCommand.h  RecommendCommand.h  SocketMenu.h  TCPServer.h  ThreadClientManager.h  ThreadPoolManager.h
src/Objects/: App.cpp  CLI.cpp  Client.js  Client.py  ClientHandler.cpp  ConsoleMenu.cpp  Globals.cpp  Main.cpp  Movie.cpp  Newclient.js  SocketMenu.cpp  TCPServer.cpp  ThreadClientManager.cpp  ThreadPoolManager.cpp  User.cpp
src/WebServer/: Client.js  ErrorHandling.js  TokenVerfier.js  TokenVerifier.js  app.js  package-lock.json  package.json
src/WebServer/config/: .env.local
src/WebServer/contents/movies/: FolderHolder.txt
src/WebServer/contents/users/: FolderHolder.txt
src/WebServer/controllers/: categories.js  category.js  content.js  file.js  movie.js  token.js  user.js
src/WebServer/models/: categories.js  category.js  movie.js  user.js
src/WebServer/routes/: categories.js  category.js  content.js  files.js  movie.js  token.js  user.js
src/WebServer/services/: categories.js  category.js  content.js  movie.js  token.js  user.js
src/web_app/: Dockerfile  package-lock.json  package.json
src/web_app/public/: index.html
src/web_app/src/: App.css  App.js  config.js  index.css
src/web_app/src/LoginForm/: LoginForm.css  LoginForm.jsx  fieldItem.jsx  login.jsx
src/web_app/src/MovieCard/: MovieCard.css  MovieCard.js
src/web_app/src/MovieInfo/: MovieInfo.css  MovieInfo.js
src/web_app/src/MovieWatch/: MovieWatch.css  MovieWatch.js  VideoPlayer.css  VideoPlayer.js
src/web_app/src/Pages/Admin/: Admin.css  Admin.js
src/web_app/src/Pages/Guest/: Guest.css  Guest.js
src/web_app/src/Pages/Home/: Home.css  Home.js
src/web_app/src/Pages/MovieInfo/: MovieInfo.css  MovieInfo.js
src/web_app/src/Pages/MovieWatch/: MovieWatch.js
src/web_app/src/Pages/SubscriptionForms/: FieldItem.js  Form.css  LoginForm.js  SignUpForm.js
src/web_app/src/Recommendations/: Recommendations.css  Recommendations.js
src/web_app/src/SubscriptionForms/: Form.css  LoginForm.js  SignUpForm.js  fieldItem.js
src/web_app/src/SubscriptionForms/LoginForm/: LoginForm.css  LoginForm.jsx
src/web_app/src/SubscriptionForms/SignUpForm/: SignUpForm.css  SignUpForm.jsx
src/web_app/src/Utils/InfoButton/: InfoButton.css  InfoButton.js
src/web_app/src/Utils/MovieCard/: InfoButton.css  InfoButton.js  MovieCard.css  MovieCard.js
src/web_app/src/Utils/ProfileDropdown/: ProfileDropdown.css  ProfileDropdown.js
src/web_app/src/Utils/Recommendations/: Recommendations.js
src/web_app/src/Utils/VideoPlayer/: VideoPlayer.js
src/web_app/src/VideoPlayer/: VideoPlayer.css  VideoPlayer.js
src/web_app/src/pages/: Admin.css  Admin.js  Home.css  Home.js  guest.css  guest.js
